# service_meteo_local

./: README.md  pyproject.toml
tp1/: conseils.json  data.json  data.xml  fusion.py  main.py  main_json.py  main_xml.py
